<resources>
    <string name="app_name">SmartIndiaHackathon</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="home_page">Home Page</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="starred_files">Starred Files</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>

    <string name="convert_to_">Convert To EPUB File</string>
    <string name="open_pdf_fi">Open PDF File</string>
    <string name="open_doc_fi">Open DOC File</string>
    <string name="open_epub_f">Open EPUB File</string>
    <string name="accessibility">Accessibility</string>
    <string name="upload_file1">Upload File</string>
    <string name="download1">Download</string>
    <string name="share1">Share</string>
    <string name="convert_to_epub_file">Convert To EPUB File</string>
    <string name="open_in_epub_editor">Open In EPUB Editor</string>
    <string name="pdf_to_epub">PDF To EPUB</string>
    <string name="edit_file">Edit File</string>
    <string name="tools">Tools</string>
    <string name="speak_file">Speak File</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="choose">Choose</string>
    <string name="todo">TODO</string>
    <string name="draw">Draw</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="search1">Search</string>
    <string name="share2">Share</string>
    <string name="draw1">Draw</string>
    <string name="todo3">TODO</string>
    <string name="choose1">Choose</string>
    <string name="search2">Search</string>
    <string name="draw3">Draw</string>
    <string name="share4">Share</string>
    <string name="edit_2">Edit</string>
    <string name="edit_0">Edit</string>
    <string name="font_size">Font Size</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="word_spacing">Word Spacing</string>
    <string name="edit_4">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="facebook_app_id">565723891520004</string>
    <string name="fb_login_protocol_scheme">fb565723891520004</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="font_size_20">Font Size: 20</string>
    <string name="setting">Setting</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="menu_signature">My Signature</string>
    <string name="speech">Pdf to Text Speech</string>
    <string name="heading_2">Read your PDF using Text to Speech</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="click_to_select_a_pdf">Click to Select a PDF</string>
</resources>