<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/pdf_epub_doc_cancel"-->
<!--            tools:ignore="ContentDescription" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="10dp"
            android:text="@string/choose1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView

            android:layout_width="25dp"
            android:layout_marginStart="10dp"
            android:layout_height="25dp"
            android:background="@drawable/pdf_epub_doc_share"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <TextView
            android:textColor="@color/cardview_dark_background"
            android:textSize="19sp"
            android:paddingStart="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share4"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView

            android:layout_width="25dp"
            android:layout_marginStart="10dp"
            android:layout_height="25dp"
            android:background="@drawable/pdf_epub_doc_search"
            android:layout_marginLeft="10dp"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />
        <TextView
            android:textColor="@color/cardview_dark_background"
            android:textSize="19sp"
            android:paddingStart="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search2"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/btnSpeech"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView

            android:layout_width="25dp"
            android:layout_marginStart="10dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_baseline_speaker_24"
            android:layout_marginLeft="10dp"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />
        <TextView
            android:textColor="@color/cardview_dark_background"
            android:textSize="19sp"
            android:paddingStart="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_to_speech"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView

            android:layout_width="25dp"
            android:layout_marginStart="10dp"
            android:layout_height="25dp"
            android:background="@drawable/pdf_draw"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <TextView
            android:textColor="@color/cardview_dark_background"
            android:textSize="19sp"
            android:paddingStart="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/draw3"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>