<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:id="@+id/drawerLayout"
    android:background="@drawable/background_decent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_drawer"
        android:layout_gravity="start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="0dp" />

        <View
            android:id="@+id/rectangle_7"
            android:layout_width="110dp"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="148dp"
            android:layout_marginTop="102dp"
            android:background="@drawable/c_rectangle_7" />

        <View
            android:id="@+id/upload_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="113dp"
            android:background="@drawable/c_upload_1" />

        <TextView
            android:id="@+id/upload_file1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="181dp"
            android:gravity="center_horizontal|top"
            android:text="@string/upload_file1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/rectangle_8"
            android:layout_width="110dp"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="259dp"
            android:background="@drawable/c_rectangle_8" />

        <View
            android:id="@+id/ellipse_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="267dp"
            android:background="@drawable/c_ellipse_6" />

        <View
            android:id="@+id/convert_dar"
            android:layout_width="37.5dp"
            android:layout_height="37.5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="185dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/c_convert_dark_2" />


        <TextView
            android:id="@+id/convert_to_epub_file"
            android:layout_width="101dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="151dp"
            android:layout_marginTop="326dp"
            android:gravity="center_horizontal|top"
            android:text="@string/convert_to_epub_file"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/rectangle_11"
            android:layout_width="110dp"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="146dp"
            android:layout_marginTop="416dp"
            android:background="@drawable/c_rectangle_11" />


        <TextView
            android:id="@+id/open_epub_f"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="153dp"
            android:layout_marginTop="483dp"
            android:gravity="center_horizontal|top"
            android:text="@string/open_in_epub_editor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/ellipse_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="172dp"
            android:layout_marginTop="425dp"
            android:background="@drawable/c_ellipse_7" />

        <View
            android:id="@+id/open_file_1"
            android:layout_width="50dp"
            android:layout_height="47.12dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="179dp"
            android:layout_marginTop="431dp"
            android:background="@drawable/c_open_file_1" />

        <View
            android:id="@+id/ellipse_8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="577dp"
            android:background="@drawable/c_ellipse_8" />

        <View
            android:id="@+id/ellipse_9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="251dp"
            android:layout_marginTop="577dp"
            android:background="@drawable/c_ellipse_9" />

        <View
            android:id="@+id/share_1"
            android:layout_width="49dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="275dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/c_share_1" />

        <View
            android:id="@+id/access_1"
            android:layout_width="47dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/h_access_1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="284dp"
            tools:layout_editor_absoluteY="16dp" />
        <View
            android:id="@+id/down_1"
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="601dp"
            android:background="@drawable/c_down_1" />

        <TextView
            android:id="@+id/download"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="673dp"
            android:gravity="center_horizontal|top"
            android:text="@string/download1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share"
            android:layout_width="87dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="254dp"
            android:layout_marginTop="673dp"
            android:gravity="center_horizontal|top"
            android:text="@string/share1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="51dp"
            android:layout_height="39dp"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="350dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
